Thy: Sua nhieu giao dien

--- a/TMS/TMS/Views/Profile/Index.cshtml
+++ b/TMS/TMS/Views/Profile/Index.cshtml
@@ -1,10 +1,14 @@
 ﻿@model TMS.ViewModels.ProfileRequesterViewModel
 @{
-    Layout = "~/Views/Shared/TMSRequesterLayout.cshtml";
+    Layout = "~/Views/Shared/_TopLayout.cshtml";
     ViewBag.Title = "Profile";
 }
 
 <style>
+    body {
+        background-color: #25b774 !important;
+    }
+
     .profileAvatar {
         text-align: center;
     }
