--- a/TMS/TMS/Areas/Technician/Views/Home/Index.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/Home/Index.cshtml
@@ -22,6 +22,15 @@
         padding: 15px 0px;
     }
 
+    ul {
+        padding-left: 0px;
+    }
+
+    li {
+        list-style: none;
+        padding-left: 0px;
+    }
+
     .table-ticket {
         padding: 5px 0px;
         border-bottom: solid 1px #cacaca;
@@ -43,7 +52,7 @@
     <div class="col-lg-3 col-sm-3 col-xs-6">
         <div class="small-box bg-light-blue">
             <div class="inner">
-                <h3>@ViewBag.AssignedTicketsNo</h3>
+                <h3 id="assigned-tickets-count">@ViewBag.AssignedTicketsNo</h3>
                 <p>Assigned Tickets</p>
             </div>
             <div class="icon">
@@ -55,7 +64,7 @@
     <div class="col-lg-3 col-sm-3 col-xs-6">
         <div class="small-box bg-green">
             <div class="inner">
-                <h3>@ViewBag.SolvedTicketsNo</h3>
+                <h3 id="solved-tickets-count">@ViewBag.SolvedTicketsNo</h3>
                 <p>Solved Tickets</p>
             </div>
             <div class="icon">
@@ -67,7 +76,7 @@
     <div class="col-lg-3 col-sm-3 col-xs-6">
         <div class="small-box bg-gray">
             <div class="inner text-white">
-                <h3>@ViewBag.ClosedTicketsNo</h3>
+                <h3 id="closed-tickets-count">@ViewBag.ClosedTicketsNo</h3>
                 <p>Close Tickets</p>
             </div>
             <div class="icon">
@@ -79,7 +88,7 @@
     <div class="col-lg-3 col-sm-3 col-xs-6">
         <div class="small-box bg-teal">
             <div class="inner">
-                <h3>@ViewBag.NewSolutionsNo</h3>
+                <h3 id="new-solutions-count">@ViewBag.NewSolutionsNo</h3>
                 <p>New solutions</p>
             </div>
             <div class="icon">
@@ -91,13 +100,13 @@
 </div>
 
 <div class="row">
-    <div class="col-sm-3">
+    <div class="col-sm-4">
 
     </div>
-    <div class="col-sm-9">
+    <div class="col-sm-8">
         <div class="box box-solid" id="assigned-tickets">
             <div class="box-header bg-light-blue">
-                <h4 style="padding-left: 5px"><i class="fa fa-tags"></i>&nbsp;&nbsp;New tickets are assigned to me</h4>
+                <h4 style="padding-left: 5px"><i class="fa fa-tags"></i>&nbsp;&nbsp;Assigned Tickets</h4>
             </div>
             @if (ticketList != null)
             {
@@ -134,13 +143,16 @@
                                     </div>
                                     <div class="col-lg-3 col-md-3 col-sm-4">
                                         <div class="text-center pull-right">
-                                            <p class="text-muted" ><i class="fa fa-clock-o"></i>&nbsp;&nbsp;Date created</p>
+                                            <p class="text-muted"><i class="fa fa-clock-o"></i>&nbsp;&nbsp;Date created</p>
                                             <p class="text-blue">@ticket.CreatedTime</p>
                                         </div>
                                     </div>
                                 </div>
                             }
                         }
+                    </div>
+                    <div class="box-footer">
+                        <div class="col-sm-12"><a class="text-blue pull-right" href="/Technician/ManageTicket">View more >></a> </div>
                     </div>
                 }
                 else
@@ -192,6 +204,9 @@
                             }
                         }
                     </div>
+                    <div class="box-footer">
+                        <div class="col-sm-12"><a class="text-blue pull-right" href="/Technician/ManageTicket">View more >></a> </div>
+                    </div>
                 }
                 else
                 {
@@ -242,7 +257,9 @@
                             }
                         }
                     </div>
-
+                    <div class="box-footer">
+                        <div class="col-sm-12"><a class="text-blue pull-right" href="/Technician/ManageTicket">View more >></a> </div>
+                    </div>
                 }
                 else
                 {
@@ -295,6 +312,9 @@
                             </div>
                         }
                     </div>
+                    <div class="box-footer">
+                        <div class="col-sm-12"><a class="text-blue pull-right" href="/KnowledgeBase">View more >></a> </div>
+                    </div>
                 }
                 else
                 {
@@ -306,3 +326,8 @@
         </div>
     </div>
 </div>
+
+@section scripts {
+    <script>
+    </script>
+}
